--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,55 @@
-.header {
-  position: sticky; /* Positionierung des Headers ist fest */
+h3 {
+  margin-top: 0;
+}
+
+p {
+  margin: 0;
+}
+
+header {
+  display: block; /* Der Header wird als Flex-Container angezeigt */
   width: 100%; /* Die Breite des Headers soll 100% der Bildschirmbreite sein */
   background-color: #ffe369; /* Hintergrundfarbe des Headers */
-  padding: 10px; /* Innenabstand des Headers */
-  margin: -10px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 24px;
+  margin: 0;
+  padding: 10px;
+  color: #333;
+}
+
+nav {
+  position: sticky;
+  top: 0;
+  display: flex; /* Der Header wird als Flex-Container angezeigt */
+  align-items: center; /* Die Elemente im Header werden vertikal zentriert */
+  border-top: 1px solid #000;
+}
+
+.headerButton {
+  width: 34%;
+  padding: 10px;
+  border-radius: 0;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+  background-color: #ffe369;
+}
+
+.aHeader {
+  text-decoration: none; /* Entfernt die Unterstreichung des Links */
+  color: #333; /* Ändert die Farbe des Links */
+  margin: 0 10px; /* Fügt Platz um den Link hinzu */
 }
 
 .body {
   color: #333;
   background-color: #ffffff;
+  padding: 0;
+  margin: 0;
 }
 
 .main {
@@ -16,7 +57,7 @@
 }
 
 .divBlog-post {
-  background-color: #f9f9f9;
+  background-color: #eeeeee;
   border: 2px solid #000;
   margin: 0 10px 20px 10px;
   padding: 20px;
@@ -67,6 +108,9 @@
   color: #666;
 }
 
-.details {
-  background-color: #f0f0f0;
+.divParagraph {
+  margin-bottom: 10px;
+  border: 2px solid #000;
+  padding: 10px;
 }
+
